--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         
             # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish client/IXAge_IHM.Client.csproj -c Release -o release --nologo
+      run: dotnet publish Client/IXAge_IHM.Client.csproj -c Release -o release --nologo
       
       
       
