--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         
             # publishes Blazor project to the release-folder
     - name: Publish .NET Core Project
-      run: dotnet publish Client/IXAge_IHM.Client.csproj -c Release -o release --nologo
+      run: dotnet publish Server/IXAge_IHM.Server.csproj -c Release -o release --nologo
          
          # changes the base-tag in index.html from '/' to 'IXAge.github.io' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to IXAge.github.io
